syntax = "proto3";

option csharp_namespace = "ResumeGenerator.ApiService.Grpc.protos";

service AuthServiceGrpc {
  rpc GetUserByToken (GetUserByTokenRequest) returns (GetUserByTokenResponse);
}

message GetUserByTokenRequest {
  string token = 1;
}

message GetUserByTokenResponse {
  string id = 1;
  string username = 2;
  bool is_active = 3;
}
